fixed gap

--- a/style.css
+++ b/style.css
@@ -389,7 +389,7 @@ form {
   display: flex;
   flex-direction: column;
   padding: 1rem;
-  gap: 1rem;
+  gap: 3rem;
 }
 img.bagImg {
   width: 100%;
